src/panel/Index.scss
// * { box-sizing: border-box; }

html {
	height: 100%;
}

body {
	height: 100%;
	padding: 0; /* Override */
	background-color: var(--vscode-menu-background); // Borrowed from Explorer background
	display: flex;
	flex-direction: column;
}

// ^^ Move to index.html ^^

#root {
	flex: 1 1 auto;
	display: flex;
	flex-direction: column;
	background-color: var(--vscode-editor-background); // Restore from pre-body
	overflow: hidden;
}

.flexFill { flex: 1 1 }

.ellipsis {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.svZeroData {
	flex: 1 1 auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;

	& > div {
		color: var(--vscode-button-foreground);
		background: var(--vscode-button-background);
		width: 200px;
		padding: 4px;
		line-height: 1.4em;
		text-align: center;
		cursor: pointer;
	}
}

.svListPane {
	flex: 1 1 auto;
	display: flex;
	flex-direction: column;
	overflow: hidden;
	outline: none;

	.svListHeader {
		display: flex;
		align-items: center;

		.codicon {
			line-height: 35px;
			width: 35px;
			cursor: pointer;
			// &:hover { background-color: var(--vscode-list-hoverBackground); }
		}
	}

	.svListTableScroller {
		flex: 1 1 auto;
		overflow-y: overlay;
		margin-top: 12px - 4px; // 4px optical to compensate for TH line height.
		scroll-padding: 48px 0;
	}
}

.svListItem {
	line-height: 22px;

	cursor: pointer;
	&:hover:not(.svItemSelected) { background-color: var(--vscode-list-hoverBackground); }
}

.svSecondary {
	// VS Code has 0.7 here but 0.6 in other places.
	// Opacity causing z-order issues with position: sticky, so using manually calced color.
	// Need to solve calc relative to theme.
	color: rgb(139, 139, 139);
}

.svLogsPane {
	.svListItem {
		padding: 0 22px;
		display: flex;
		align-items: center;
		white-space: nowrap;
		cursor: default;
		& > * + * {
			margin-left: 6px;
		}

		& > :nth-child(2) {
			flex: 1 1 auto;
		}

		.codicon {
			cursor: pointer;
		}
	}
}

.svListTable {
	width: 100%;
	line-height: 22px;
	border-spacing: 0;
	table-layout: fixed; // Otherwise will overshoot 100%.
	cursor: pointer;
	user-select: none;
	margin-bottom: 22px; // About one row's height.

	thead {
		td:hover { background-color: var(--vscode-list-hoverBackground); }

		td {
			position: relative; // For resize handle.
			position: sticky;
			top: 0;
			background-color: var(--vscode-editor-background);

			.svCell { padding-bottom: 2px; }
		}
	}

	tbody tr {
		// Redundant with .svListItem?
		&:hover:not(.svItemSelected) { background-color: var(--vscode-list-hoverBackground); }
	}

	td {
		padding: 0 0 0 8px;

		&:first-child { padding-left: 16px; }

		& > .svCell {
			@extend .ellipsis;
			display: flex;
			align-items: center;
	
			& > * + * {
				margin-left: 6px;
			}

			& > .twisties {
				width: 20px;
				display: flex;
				align-items: center;
				justify-content: center;
				transform-origin: center;
				color: inherit;
				flex-shrink: 0;
				align-self: center;
			}
		}
	}

	.svBadge {
		margin-left: 10px;
		background-color: var(--vscode-badge-background);
    	color: var(--vscode-badge-foreground);
	}

	.svGroup {
		align-items: baseline !important; // Override .svListTable td > .svCell
		padding-right: 24px;
		.svSecondary { font-size: .9em; line-height: 10px; }
	}

	.svItemSelected {
		background-color: var(--vscode-list-inactiveSelectionBackground);
	}
}

.svDetailsPane {
	box-sizing: border-box;
	flex: 0 0 auto;
	
	overflow-y: overlay;

	.svDetailsBody {
		padding: 12px 22px;

		&.svDetailsBodyCodeflow {
			// margin: 0 -22px;
			& > .svListItem {
				// padding: 0 22px;
				display: flex;
				white-space: nowrap;
			}
		}

		.svDetailsMessage {
			margin-bottom: 16px;
		}
	
		.svDetailsInfo {
			display: grid;
			grid-template-columns: 130px auto;
			grid-column-gap: 4px;
			grid-row-gap: 4px;

			span:nth-child(odd) {
				@extend .svSecondary;
			}
		}
	}
}

.svResizer {
	flex: 0 0 auto;
	background-color: var(--vscode-editorGroup-border);
	height: 1px;
	position: relative; // For handle.
}

.svListHeader {
	position: relative;
}

